// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MutedBox render() handles default 1`] = `
<MutedBox
  statusDetails={Object {}}
>
  <BannerContainer
    priority="default"
  >
    <div
      className="css-1xa0gsm-BannerContainer e1z0bih41"
    >
      <BannerSummary>
        <p
          className="css-1kzjhn2-BannerSummary e1z0bih42"
        >
          <IconMute
            color="red400"
            size="sm"
          >
            <ForwardRef(SvgIcon)
              color="red400"
              size="sm"
            >
              <svg
                fill="#FA4747"
                height="16px"
                viewBox="0 0 16 16"
                width="16px"
              >
                <path
                  d="M9.17,14H6.57a.77.77,0,0,1-.42-.13L3.08,11.78H.86A.74.74,0,0,1,.11,11V5a.74.74,0,0,1,.75-.75H3.08L6.15,2.15A.77.77,0,0,1,6.57,2h2.6a.76.76,0,0,1,.75.75V13.23A.76.76,0,0,1,9.17,14ZM6.8,12.48H8.42v-9H6.8L3.73,5.59a.77.77,0,0,1-.42.13H1.61v4.56h1.7a.77.77,0,0,1,.42.13Z"
                />
                <path
                  d="M12.22,8,10.83,6.61a.75.75,0,1,1,1.06-1.06l1.39,1.39,1.39-1.39a.75.75,0,0,1,1.06,1.06L14.34,8l1.39,1.39a.75.75,0,0,1,0,1.06.74.74,0,0,1-.53.22.71.71,0,0,1-.53-.22L13.28,9.06l-1.39,1.39a.75.75,0,0,1-1.06,0,.75.75,0,0,1,0-1.06Z"
                />
              </svg>
            </ForwardRef(SvgIcon)>
          </IconMute>
          <span>
            This issue has been ignored
             — 
            You will not be notified of any changes and it will not show up by default in feeds.
          </span>
        </p>
      </BannerSummary>
    </div>
  </BannerContainer>
</MutedBox>
`;

exports[`MutedBox render() handles ignoreCount 1`] = `
<MutedBox
  statusDetails={
    Object {
      "ignoreUserCount": 100,
    }
  }
>
  <BannerContainer
    priority="default"
  >
    <div
      className="css-1xa0gsm-BannerContainer e1z0bih41"
    >
      <BannerSummary>
        <p
          className="css-1kzjhn2-BannerSummary e1z0bih42"
        >
          <IconMute
            color="red400"
            size="sm"
          >
            <ForwardRef(SvgIcon)
              color="red400"
              size="sm"
            >
              <svg
                fill="#FA4747"
                height="16px"
                viewBox="0 0 16 16"
                width="16px"
              >
                <path
                  d="M9.17,14H6.57a.77.77,0,0,1-.42-.13L3.08,11.78H.86A.74.74,0,0,1,.11,11V5a.74.74,0,0,1,.75-.75H3.08L6.15,2.15A.77.77,0,0,1,6.57,2h2.6a.76.76,0,0,1,.75.75V13.23A.76.76,0,0,1,9.17,14ZM6.8,12.48H8.42v-9H6.8L3.73,5.59a.77.77,0,0,1-.42.13H1.61v4.56h1.7a.77.77,0,0,1,.42.13Z"
                />
                <path
                  d="M12.22,8,10.83,6.61a.75.75,0,1,1,1.06-1.06l1.39,1.39,1.39-1.39a.75.75,0,0,1,1.06,1.06L14.34,8l1.39,1.39a.75.75,0,0,1,0,1.06.74.74,0,0,1-.53.22.71.71,0,0,1-.53-.22L13.28,9.06l-1.39,1.39a.75.75,0,0,1-1.06,0,.75.75,0,0,1,0-1.06Z"
                />
              </svg>
            </ForwardRef(SvgIcon)>
          </IconMute>
          <span>
            This issue has been ignored until it affects 
            <strong
              key="1"
            >
              100
            </strong>
             more user(s)
             — 
            You will not be notified of any changes and it will not show up by default in feeds.
          </span>
        </p>
      </BannerSummary>
    </div>
  </BannerContainer>
</MutedBox>
`;

exports[`MutedBox render() handles ignoreCount with ignoreWindow 1`] = `
<MutedBox
  statusDetails={
    Object {
      "ignoreCount": 100,
      "ignoreWindow": 1,
    }
  }
>
  <BannerContainer
    priority="default"
  >
    <div
      className="css-1xa0gsm-BannerContainer e1z0bih41"
    >
      <BannerSummary>
        <p
          className="css-1kzjhn2-BannerSummary e1z0bih42"
        >
          <IconMute
            color="red400"
            size="sm"
          >
            <ForwardRef(SvgIcon)
              color="red400"
              size="sm"
            >
              <svg
                fill="#FA4747"
                height="16px"
                viewBox="0 0 16 16"
                width="16px"
              >
                <path
                  d="M9.17,14H6.57a.77.77,0,0,1-.42-.13L3.08,11.78H.86A.74.74,0,0,1,.11,11V5a.74.74,0,0,1,.75-.75H3.08L6.15,2.15A.77.77,0,0,1,6.57,2h2.6a.76.76,0,0,1,.75.75V13.23A.76.76,0,0,1,9.17,14ZM6.8,12.48H8.42v-9H6.8L3.73,5.59a.77.77,0,0,1-.42.13H1.61v4.56h1.7a.77.77,0,0,1,.42.13Z"
                />
                <path
                  d="M12.22,8,10.83,6.61a.75.75,0,1,1,1.06-1.06l1.39,1.39,1.39-1.39a.75.75,0,0,1,1.06,1.06L14.34,8l1.39,1.39a.75.75,0,0,1,0,1.06.74.74,0,0,1-.53.22.71.71,0,0,1-.53-.22L13.28,9.06l-1.39,1.39a.75.75,0,0,1-1.06,0,.75.75,0,0,1,0-1.06Z"
                />
              </svg>
            </ForwardRef(SvgIcon)>
          </IconMute>
          <span>
            This issue has been ignored until it occurs 
            <strong
              key="1"
            >
              100
            </strong>
             time(s) in 
            <strong
              key="3"
            >
              <Duration
                seconds={60}
              >
                <span>
                  60 seconds
                </span>
              </Duration>
            </strong>
             — 
            You will not be notified of any changes and it will not show up by default in feeds.
          </span>
        </p>
      </BannerSummary>
    </div>
  </BannerContainer>
</MutedBox>
`;

exports[`MutedBox render() handles ignoreUntil 1`] = `
<MutedBox
  statusDetails={
    Object {
      "ignoreUntil": "2017-06-21T19:45:10Z",
    }
  }
>
  <BannerContainer
    priority="default"
  >
    <div
      className="css-1xa0gsm-BannerContainer e1z0bih41"
    >
      <BannerSummary>
        <p
          className="css-1kzjhn2-BannerSummary e1z0bih42"
        >
          <IconMute
            color="red400"
            size="sm"
          >
            <ForwardRef(SvgIcon)
              color="red400"
              size="sm"
            >
              <svg
                fill="#FA4747"
                height="16px"
                viewBox="0 0 16 16"
                width="16px"
              >
                <path
                  d="M9.17,14H6.57a.77.77,0,0,1-.42-.13L3.08,11.78H.86A.74.74,0,0,1,.11,11V5a.74.74,0,0,1,.75-.75H3.08L6.15,2.15A.77.77,0,0,1,6.57,2h2.6a.76.76,0,0,1,.75.75V13.23A.76.76,0,0,1,9.17,14ZM6.8,12.48H8.42v-9H6.8L3.73,5.59a.77.77,0,0,1-.42.13H1.61v4.56h1.7a.77.77,0,0,1,.42.13Z"
                />
                <path
                  d="M12.22,8,10.83,6.61a.75.75,0,1,1,1.06-1.06l1.39,1.39,1.39-1.39a.75.75,0,0,1,1.06,1.06L14.34,8l1.39,1.39a.75.75,0,0,1,0,1.06.74.74,0,0,1-.53.22.71.71,0,0,1-.53-.22L13.28,9.06l-1.39,1.39a.75.75,0,0,1-1.06,0,.75.75,0,0,1,0-1.06Z"
                />
              </svg>
            </ForwardRef(SvgIcon)>
          </IconMute>
          <span>
            This issue has been ignored until 
            <strong
              key="1"
            >
              <DateTime
                date="2017-06-21T19:45:10Z"
                seconds={true}
              >
                <time>
                  Jun 21, 2017 7:45:10 PM UTC
                </time>
              </DateTime>
            </strong>
             — 
            You will not be notified of any changes and it will not show up by default in feeds.
          </span>
        </p>
      </BannerSummary>
    </div>
  </BannerContainer>
</MutedBox>
`;

exports[`MutedBox render() handles ignoreUserCount 1`] = `
<MutedBox
  statusDetails={
    Object {
      "ignoreUserCount": 100,
    }
  }
>
  <BannerContainer
    priority="default"
  >
    <div
      className="css-1xa0gsm-BannerContainer e1z0bih41"
    >
      <BannerSummary>
        <p
          className="css-1kzjhn2-BannerSummary e1z0bih42"
        >
          <IconMute
            color="red400"
            size="sm"
          >
            <ForwardRef(SvgIcon)
              color="red400"
              size="sm"
            >
              <svg
                fill="#FA4747"
                height="16px"
                viewBox="0 0 16 16"
                width="16px"
              >
                <path
                  d="M9.17,14H6.57a.77.77,0,0,1-.42-.13L3.08,11.78H.86A.74.74,0,0,1,.11,11V5a.74.74,0,0,1,.75-.75H3.08L6.15,2.15A.77.77,0,0,1,6.57,2h2.6a.76.76,0,0,1,.75.75V13.23A.76.76,0,0,1,9.17,14ZM6.8,12.48H8.42v-9H6.8L3.73,5.59a.77.77,0,0,1-.42.13H1.61v4.56h1.7a.77.77,0,0,1,.42.13Z"
                />
                <path
                  d="M12.22,8,10.83,6.61a.75.75,0,1,1,1.06-1.06l1.39,1.39,1.39-1.39a.75.75,0,0,1,1.06,1.06L14.34,8l1.39,1.39a.75.75,0,0,1,0,1.06.74.74,0,0,1-.53.22.71.71,0,0,1-.53-.22L13.28,9.06l-1.39,1.39a.75.75,0,0,1-1.06,0,.75.75,0,0,1,0-1.06Z"
                />
              </svg>
            </ForwardRef(SvgIcon)>
          </IconMute>
          <span>
            This issue has been ignored until it affects 
            <strong
              key="1"
            >
              100
            </strong>
             more user(s)
             — 
            You will not be notified of any changes and it will not show up by default in feeds.
          </span>
        </p>
      </BannerSummary>
    </div>
  </BannerContainer>
</MutedBox>
`;

exports[`MutedBox render() handles ignoreUserCount with ignoreUserWindow 1`] = `
<MutedBox
  statusDetails={
    Object {
      "ignoreUserCount": 100,
      "ignoreUserWindow": 1,
    }
  }
>
  <BannerContainer
    priority="default"
  >
    <div
      className="css-1xa0gsm-BannerContainer e1z0bih41"
    >
      <BannerSummary>
        <p
          className="css-1kzjhn2-BannerSummary e1z0bih42"
        >
          <IconMute
            color="red400"
            size="sm"
          >
            <ForwardRef(SvgIcon)
              color="red400"
              size="sm"
            >
              <svg
                fill="#FA4747"
                height="16px"
                viewBox="0 0 16 16"
                width="16px"
              >
                <path
                  d="M9.17,14H6.57a.77.77,0,0,1-.42-.13L3.08,11.78H.86A.74.74,0,0,1,.11,11V5a.74.74,0,0,1,.75-.75H3.08L6.15,2.15A.77.77,0,0,1,6.57,2h2.6a.76.76,0,0,1,.75.75V13.23A.76.76,0,0,1,9.17,14ZM6.8,12.48H8.42v-9H6.8L3.73,5.59a.77.77,0,0,1-.42.13H1.61v4.56h1.7a.77.77,0,0,1,.42.13Z"
                />
                <path
                  d="M12.22,8,10.83,6.61a.75.75,0,1,1,1.06-1.06l1.39,1.39,1.39-1.39a.75.75,0,0,1,1.06,1.06L14.34,8l1.39,1.39a.75.75,0,0,1,0,1.06.74.74,0,0,1-.53.22.71.71,0,0,1-.53-.22L13.28,9.06l-1.39,1.39a.75.75,0,0,1-1.06,0,.75.75,0,0,1,0-1.06Z"
                />
              </svg>
            </ForwardRef(SvgIcon)>
          </IconMute>
          <span>
            This issue has been ignored until it affects 
            <strong
              key="1"
            >
              100
            </strong>
             user(s) in 
            <strong
              key="3"
            >
              <Duration
                seconds={60}
              >
                <span>
                  60 seconds
                </span>
              </Duration>
            </strong>
             — 
            You will not be notified of any changes and it will not show up by default in feeds.
          </span>
        </p>
      </BannerSummary>
    </div>
  </BannerContainer>
</MutedBox>
`;
